tests/bad/path_expr.glaz
fn a() {}

fn main() {
  a()::s1;
}
